# agentskills-runtime

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_cn.md  README_en.md  build.cj  cjpm.toml
.github/workflows/: sync-from-atomgit-advanced.yml
.specify/memory/: CANGJIE_CODING_GUIDELINES.md
docs/: agentskills-api-reference.md  agentskills-api-service-run.md  agentskills-api-testing-guide.md  api-service-run.md  api-testing-guide.md  api_reference.md  architecture.md  builtin-tools.md  https-configuration.md  index.md  quickstart.md  release-guide.md  sdk-javascript.md  skill-development.md  原生编程vs注解方式对比分析.md  深度解析agent skill标准.docx
docs/agents/: agent-declaration-spec.md
docs/package_docs/: app.md  config.md  http.md  tool.md
docs/ref/: AIDrivenArchitecture.md  GLM5Tagentskills-runtimeRoadMapAdv.md  GLM5TharnessVSAIinfra.md  MetisVSopenclaw.docx  MetisVSopenclaw.md  claudecode.docx  claudecode.md  doubaoseed2agentskills-runtimeRoadMapAdv.md  doubaoseed2harnessVSAIinfra.md  harness.md
docs/uctoo-v4/: README.md  crud-generator-refactor-plan.md  query-parser-implementation.md  row-level-permission-system.md  static-file-service-architecture.md  uctoo-database-design-document.md  uctoo-database-design-specification.md  uctoo-v4-api-specification.md  uctoo-v4-architecture.md  uctoo-v4-middleware-guide.md  uctoo-v4-module-development-refactored.md  uctoo-v4-module-development.md  (+2 more)
libs/CJson/: README.md  (+2 more)
release/: .env.example  VERSION  VERSION-0.0.20.md  release-notes-0.0.12.md  release-notes-0.0.13.md  release-notes-0.0.15.md  release-notes-0.0.16.md  release-notes-0.0.17.md  release-notes-0.0.18.md  release-notes-0.0.19.md  release-notes-0.0.20.md  release-notes-0.0.21.md  release-notes-0.0.22.md  release-notes-0.0.23.md  release-notes-0.0.24.md  release-notes-0.0.25.md
sdk/python/: .gitignore  LICENSE  README.md  README_cn.md  publish.py  pyproject.toml
sdk/python/runtime/win-x64/release/: VERSION  magic-cache.json
sdk/python/runtime/win-x64/release/commonmark4cj/: commonmark4cj.cjo  commonmark4cj.commonmark.cjo  commonmark4cj.strikethrough.cjo  commonmark4cj.table.cjo  incremental-cache.json
sdk/python/runtime/win-x64/release/magic/: incremental-cache.json  magic.agent.base.cjo  magic.agent.cjo  magic.agent_executor.common.cjo  magic.agent_executor.dsl.cjo  magic.agent_executor.naive.cjo  magic.agent_executor.plan_react.cjo  magic.agent_executor.react.cjo  magic.agent_executor.tool_loop.cjo  magic.agent_group.cjo  magic.cjo  magic.cli.cjo  magic.compactor.cjo  magic.config.cjo  magic.core.agent.cjo  magic.core.cjo  magic.core.interaction.cjo  magic.core.message.cjo  magic.core.model.cjo  magic.core.rag.cjo  magic.core.skill.cjo  magic.core.tool.cjo  magic.dsl.cjo  magic.examples.arkts_syntax_assistant_skill.cjo  magic.examples.arkts_syntax_assistant_skill.src.cjo  magic.examples.direct_skill_test.cjo  magic.examples.doc_generator.cjo  magic.examples.doc_translator.cjo  magic.examples.find_skills_skill.cjo  magic.examples.find_skills_skill.src.cjo  magic.examples.mcp_client.cjo  magic.examples.mini_rag.cjo  magic.examples.skill_examples.cjo  magic.examples.skill_mcp_client.cjo  magic.examples.uctoo_api_mcp_client.cjo  magic.examples.uctoo_api_mcp_server.cjo  magic.examples.uctoo_api_mcp_server.src.cjo  magic.examples.uctoo_api_skill.cjo  magic.examples.uctoo_api_skill.src.cjo  magic.examples.uctoo_api_skill.src.models.cjo  (+41 more)
sdk/python/runtime/win-x64/release/yaml4cj/: incremental-cache.json  yaml4cj.cjo  yaml4cj.yaml.cjo
sdk/python/src/agent_skills/: __init__.py  cli.py  client.py  models.py  runtime.py  utils.py
sdk/python/src/agent_skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sdk/python/test-skills/test-skill/: SKILL.md
sdk/python/tests/: conftest.py  test_client.py  test_models.py  test_utils.py
sql/: init_tool_permissions.sql  uctooDB.sql  uctoov4InitData.sql
(+2604 files in other folders)
